<resources>
    <string name="app_name">Тесты для врачей (ПМГМУ)</string>
    <string name="lessons">Предметы</string>
    <string name="statisctics">Статистика</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="action_settings">Заново</string>
    <string name="action_save">Сохранить</string>
    <string name="action_delete_all">Удалить все</string>
    <string name="action_delete_chosen">Удалить выбранные</string>
    <string name="action_mail_chosen">Сообщить об ошибке</string>
    <string name="banner_id">ca-app-pub-4783454866533768/8434709134</string>

    
    <string name="subjects">subjects</string>
    <string name="subjects_text">Выберите предмет для теста:</string>
    <string name="themes_text">Выберите тему теста:</string>
    <string name="mode_text">Выберите режим тестирования:</string>

    <string name="button_all_questions">Все вопросы</string>
    <string name="button_exam_mode">Режим экзамена</string>
    <string name="check_box_mistakes">Показывать ошибки сразу?</string>

    <string name="text_mistakes_1">Всего в тесте вопросов:</string>
    <string name="text_mistakes_2">вопросов.</string>
    <string name="text_mistales_set">Выберите нужное количество вопросов</string>

    <string name="commit_settings_text">Начать тест</string>

    <string name="fragment_right">Правильные</string>
    <string name="fragment_mistake">Неправильные </string>
    <string name="fragment_unchosen">Невыбранные правильные</string>

    <string name="button_next">Далее</string>
    <string name="button_next_colors">Проверить</string>
    <string name="button_save">Сохранить и выйти</string>

    <string name="result_page_text">Итоги:</string>
    <string name="result_page_button">Перейти к предметам</string>
    <string name="mistakes_page_button">Повторить неправильные</string>
    <string name="again_page_button">Заново текущий набор</string>
    <string name="main_page_button">Заново весь тест</string>

    <string name="alert_header">Сообщение:</string>
    <string name="alert_dialogue_again_header">Начать тест заново?</string>
    <string name="alert_dialogue_save_header">Сохранить тест?</string>
    <string name="alert_dialogue_save_out">Сохранить и выйти в главное меню?</string>
    <string name="alert_dialogue_bug_report">Отправить сообщение об ошибке?</string>

    <string name="alert_dialogue_delete_all">Удалить все сохранения?</string>
    <string name="alert_dialogue_delete_chosen">Удалить выбранные сохранения?</string>
    <string name="alert_dialogue_button">Продолжить тест (сохранение будет удалено)?</string>
    <string name="load_button_text">Загрузить тест</string>

    <string name="email">norashironeko@gmail.com</string>
    <string name="choser">Выберите средство отправки</string>
    <string name="header">Отчёт об ошибке/Приложение по медицинским тестам</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tests">Тесты</string>
    <string name="bookmarks">Закладки</string>
    <string name="faq">Справка</string>
    <string name="about">О приложении</string>
    <string name="edit_about"> </string>

    <string name="mailText">Почта для связи:</string>
    <string name="versionText">Версия приложения:</string>

    <string name="faq1">• В режиме *Все вопросы* представлены все вопросы по данной теме, так же вы можете включить отображение верных вариантов ответа (будут подсвечиваться зеленым цветом)</string>
    <string name="faq2">• В *Режиме экзамена* можно выбрать определенное количество вопросов по данной теме из всех имеющихся</string>
    <string name="faq3">• Доступ к дополнительным функциям осуществляется через кнопки в правом верхнем углу вашего устройства</string>
    <string name="faq4">• Во время прохождения теста вы можете:\n 1) начать тест заново; \n 2) сохранить текущую позицию в тесте, чтобы завершить его позже;\n 3) отправить разработчику письмо об ошибке (при наличии опечаток, или если вы не согласны с правильностью ответа)</string>
    <string name="faq5">• В окне закладок можно удалить либо все закладки, либо выбранные. Для загрузки теста необходимо выбрать его и нажать кнопку загрузки</string>
</resources>
