<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tests"
            android:icon="@drawable/ic_assignment_black_48dp"
            android:title="@string/tests" />
        <item
            android:id="@+id/bookmarks"
            android:icon="@drawable/ic_bookmark_border_black_48dp"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_help_black_48dp"
            android:title="@string/faq" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/about" />
    </group>
</menu>
