<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="z.medicaltests.Advertisment">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:icon="@drawable/ic_restore_page_white_48dp"
        android:title="@string/action_settings"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="0"
        android:icon="@drawable/ic_backup_white_48dp"
        android:title="@string/action_save"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="0"
        android:icon="@drawable/ic_backup_white_48dp"
        android:title="@string/action_delete_all"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_delete_chosen"
        android:orderInCategory="0"
        android:icon="@drawable/ic_backup_white_48dp"
        android:title="@string/action_delete_chosen"
        android:showAsAction="never" />


</menu>

